<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Converter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="multiplyby">MULTIPLYBY</string>
    <string name="offset">OFFSET</string>
    <string name="special">SPECIAL</string>
    <string name="type">TYPE</string>
    <string name="name">NAME</string>
    <string name="symbol">SYMBOL</string>
    <string name="string_whichtable">Which table would you like to view?</string>
    
    <string-array name="saWhichTable">
        <item >dBase.TN_UNITS</item>
        <item >dBase.TN_CONVS</item>
    </string-array>

</resources>
